--- a/index.html
+++ b/index.html
@@ -20,12 +20,31 @@
 		finding E-Mail adresses inside a string.<br>
 		The script uses the <i>input()</i> function to interact with <br>
 		the user.<br><br><br>
-		
-		- Building it was quite funny ;) -
+
+		- Building it was quite funny ;) -<br><br>
+		<form action="" target="_blank">
+    		<input type="submit" value="View on GitHub" />
+		</form>
 	</span>
 	</div>
 	<div class = "snippet2">
-		<h4>This is a code test</h4>
+		<span><b>Python - Password Checker</b>
+		<br>
+		<br>
+		There are many Passwords out there - many weak ones.<br>
+		The goal with this script was to enter some potential passwords.<br>
+		Then the script should check wheter its secure or not.<br><br>
+		It follows several guidelines:<br>
+			- has the password more than 8 characters ? <br>
+			- has the password more than 2 numbers ? <br>
+			- has the password more than 1 special character ? <br>
+		Only if this tests were sucessful - the passwors is rated as secure.<br><br>
+		
+		<form action="https://github.com/Mooike/MailFinder.git" target="_blank">
+    		<input type="submit" value="View on GitHub" />
+		</form>
+
+	</span>
 	<script src="https://gist.github.com/Mooike/256a30d1eef0f3a1cb1849abd55eda4d.js"></script>
 	</div>
 
