--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 	<div class = "header">
 	<h1>Portfolio</h1>
-	<h2>Mike Leins</h2>
-	<h3>Python, JavaScript, HTML5, CSS</h3>
+	<div><h2>Mike Leins <h3>- Python, JavaScript, HTML5, CSS -</h3></h2></div>
+	
 	</div>
 	<div class = "snippet1">
 
@@ -48,7 +48,32 @@
 	<script src="https://gist.github.com/Mooike/256a30d1eef0f3a1cb1849abd55eda4d.js"></script>
 	</div>
 
+	<div class = "header">
+		<h3>- Arduino & Raspberry Pi -</h3>
+	</div>
+	<div class = "snippet3">
+		<span><b>Arduino - LED blink</b>
+		<br>
+		<br>
+		One of the simplest things you can do with a Arduino.<br>
+		The script in combination with the right use of cables, <br>reistors and leds, lets blink a LED every half second.
+
+		- Simple but cool -<br><br>
+		
+		<form action="https://github.com/Mooike/MailFinder.git" target="_blank">
+    		<input type="submit" value="View on GitHub"/>
+		</form>
+		<br><br>
+		<span>
+		<script src="https://gist.github.com/Mooike/e919f76ddc97ea76dcbacf44d8938bf5.js"></script>
+	</div>
 
 
+	<div class = "footer">
+	<form action="https://github.com/Mooike/portfolio.git" target="_blank">
+			Wanna know how i build this Portfolio website? >> 
+    		<input type="submit" value="Portfolio on GitHub" />
+	</form>
+	</div>
 </body>
 </html>
