--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Mike Leins</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<meta name="Mike Leins, coding, programmierung, leins, mike, HTML, CSS, JavaScript, Python, Entwicklung" content="Mike Leins Portfolio Website ">
 </head>
 <body>
 	<div class = "header">
@@ -22,7 +23,7 @@
 		the user.<br><br><br>
 
 		- Building it was quite funny ;) -<br><br>
-		<form action="" target="_blank">
+		<form action="https://github.com/Mooike/MailFinder.git" target="_blank">
     		<input type="submit" value="View on GitHub" />
 		</form>
 	</span>
@@ -60,15 +61,28 @@
 
 		- Simple but cool -<br><br>
 		
-		<form action="https://github.com/Mooike/MailFinder.git" target="_blank">
+		<form action="https://github.com/Mooike/LEDblink.git" target="_blank">
     		<input type="submit" value="View on GitHub"/>
 		</form>
 		<br><br>
 		<span>
 		<script src="https://gist.github.com/Mooike/e919f76ddc97ea76dcbacf44d8938bf5.js"></script>
 	</div>
+	<div class = "header">
+	<h3>- Tech, OS & Tools -</h3>
+	</div>
+	<div class = "Tech">
+	<ul>
+		<p> <b>Machines:</b> HP with I8 and 8GB Ram & shitty Laptop from a Discounter</p>
+		<p> <b>OS:</b> Windows 10 & Linux (Ubuntu - latest Release)</p>
+		<p> <b>IDE´s:</b><br> for smaller projects Sublime Text 3<br>
+					for larger ones Visual Studio code</p>
+		
 
 
+	</ul>
+
+	</div>
 	<div class = "footer">
 	<form action="https://github.com/Mooike/portfolio.git" target="_blank">
 			Wanna know how i build this Portfolio website? >> 
