--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 		the user.<br><br><br>
 
 		- Building it was quite funny ;) -<br><br>
+		<form action="mailfinder.py" target="_blank">
+    		<input type="submit" value="Try it" />
+		</form>
 		<form action="https://github.com/Mooike/MailFinder.git" target="_blank">
     		<input type="submit" value="View on GitHub" />
 		</form>
